# Swap_Pricer

./: .gitignore  CCID.xlsx  CCID_Netting.xlsx  Convention_Reference.xlsx  DEV_ARTIFACTS.md  OPEN_QUESTIONS.md  Output_Format Netting.xlsx  Output_Format.xlsx  PREDEPLOY_CLEANUP_DIFF.md  README.md  USER_MANUAL.md  build_convention_ref.py  deployment_writeup.md  diagrams.md  plan.md  pyproject.toml  questions.md  schema.md
additional output templates/: Day 1 Valuations.xlsx  Payment Report.xlsx  Payment Schedule.xlsx  Treasury Report.xlsx  _intake.md  _intake_month_end_data.md  frequency and channel.xlsx  output instructions.xlsx
model_documentation/: IRS_Netting_Output_Map.xlsx  IRS_Valuation_Output_Map.xlsx  Swap_Pricer_Model_Documentation.docx  Swap_Pricer_Model_Documentation.md  generate_output_maps.py
output/: manifest_2026-03-31.json  portfolio_2026-03-31.xlsx
scripts/: additional_outputs.py  diagnose_ccid.py  diagnose_fixings.py  discount_factor_test.py  generate_synthetic_curve.py  generate_synthetic_fixings.py  price_portfolio.py  price_portfolio_batch.py
tests/: test_bloomberg_conventions.py  test_calendar.py  test_cli_flags.py  test_conventions.py  test_cross_frequency.py  test_csv_trade_loader.py  test_curve.py  test_dated_curve_loader.py  test_dated_df_loader.py  test_debt.py  test_fixed_leg.py  test_fixings.py  test_floating_leg.py  test_golden_master.py  test_io_prod.py  test_io_prod_netting.py  test_loaders_and_portfolio.py  test_month_end_fallback.py  test_netting_db.py  test_notional.py  test_output_version.py  test_payment_delay_per_leg.py  (+6 more)
(+83 files in other folders)
